--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <ul>
+  <ul class="navbar">
     <li><a href="index.html">Resume</a></li>
     <li><a href="ai_conferences.html">Upcoming AI conferences in Chicago</a></li>
     <li><a href="concerts.html">Concert Experiences</a></li>
@@ -30,21 +30,21 @@
     <h2>Professional Experience</h2>
     <h3>Co-Founder | Operations, Marketing, AI Development | May 2024 - Present</h3>
     <p>Camy AI (Startup), Chicago, Illinois</p>
-    <ul>
+    <ul class="content">
       <li>Leading operations and marketing for Camy AI, an AI taskforce platform built to perform over 200 micro-tasks per second.</li>
       <li>Developing CamySDK, supporting over 20 AI models, integrating with Open AI, Google Gemini, and Meta AI.</li>
       <li>Establishing industry-standard encryption practices and building a Privacy Center for secure data management.</li>
     </ul>
     <h3>HR Analytics and Data Systems Intern | Jun 2024 - Aug 2024</h3>
     <p>Griffin Museum of Science and Industry, Chicago, Illinois</p>
-    <ul>
+    <ul class="content">
       <li>Used Excel, Power BI, and Power Automate to analyze HR data, automate workflows, and enhance decision-making processes.</li>
       <li>Optimized HRIS systems (ADP and Culture Amp) to streamline employee data management and improve efficiency.</li>
       <li>Enhanced data security by creating alternatives to existing Wufoo forms.</li>
-    </ul>
+    </ul class="content">
     <h3>Data Analyst Intern | May 2022 - Aug 2022</h3>
     <p>Get Max Value Pvt Ltd., New Delhi, India</p>
-    <ul>
+    <ul class="content">
       <li>Improved user engagement by 15% through website enhancement and targeted data analysis.</li>
       <li>Utilized Excel, Tableau, and Python for data processing and providing actionable insights for decision-making.</li>
     </ul>
@@ -54,13 +54,13 @@
     <h2>On-Campus Work Experience</h2>
     <h3>Resident Advisor | Aug 2023 - Present</h3>
     <p>Office of Residence Life, Illinois Institute of Technology, Chicago, Illinois</p>
-    <ul>
+    <ul class="content">
       <li>Coordinated community-building programs to strengthen resident connections and promote inclusivity.</li>
       <li>Offered conflict resolution support and enforced policies to ensure resident well-being.</li>
     </ul>
     <h3>SOAR Leader | May 2023 - Aug 2023</h3>
     <p>Illinois Institute of Technology, Chicago, Illinois</p>
-    <ul>
+    <ul class="content">
       <li>Guided new students through in-person and virtual campus experiences.</li>
       <li>Facilitated orientation sessions to help students integrate into the university.</li>
     </ul>
