--- a/concerts.html
+++ b/concerts.html
@@ -6,9 +6,9 @@
   <title>Concert Experiences</title>
 </head>
 <body>
-  <ul>
+  <ul class="navbar">
     <li><a href="index.html">Resume</a></li>
-    <li><a href="ai_conferences.html">Upcoming AI conferences in Chicago </a></li>
+    <li><a href="ai_conferences.html">Upcoming AI conferences in Chicago</a></li>
     <li><a href="concerts.html">Concert Experiences</a></li>
   </ul>
 
