--- a/concerts.html
+++ b/concerts.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <title>Concert Experiences</title>
 </head>
-<body>
+<body class="concert_page">
   <ul class="navbar">
     <li><a href="index.html">Resume</a></li>
     <li><a href="ai_conferences.html">Upcoming AI conferences in Chicago</a></li>
@@ -13,19 +13,25 @@
   </ul>
 
   <h1>My Concert Experiences</h1>
-  <p>I love attending concerts and experiencing live music! Here are my last three concert experiences that were truly unforgettable.</p>
+  <h3>I love attending concerts and experiencing live music! Here are my last three concert experiences that were truly unforgettable.</h3>
 
-  <h2>Concert 1: Prateek Kuhad at Thalia Hall</h2>
-  <img src="media/file.png" alt="Prateek Kuhad Concert at Thalia Hall Chicago Live">
-  <video width="700" height="500" controls><source src="media/IMG_6655.mp4" ></video>
-  <p>I've been following Prateek Kuhad since 2018, and this summer, I finally had the chance to meet him at his concert at Thalia Hall. The music was so soothing and created an incredibly memorable experience. It was amazing to finally hear him live and connect with the music I've loved for years.</p>
+  <section class="concert">
+    <h2>Concert 1: Prateek Kuhad at Thalia Hall</h2>
+    <img src="media/file.png" alt="Prateek Kuhad Concert at Thalia Hall Chicago Live">
+    <video controls><source src="media/IMG_6655.mp4"></video>
+    <p>I've been following Prateek Kuhad since 2018, and this summer, I finally had the chance to meet him at his concert at Thalia Hall. The music was soothing and created an incredibly memorable experience.</p>
+  </section>
 
-  <h2>Concert 2: Diljit Dosanjh at Allstate Arena, Rosemont</h2>
-  <video width="700" height="500" controls><source src="media/IMG_6472.mp4" ></video>
-  <p>Diljit Dosanjh, a renowned Indian Punjabi singer and actor, has made history as the first Punjabi artist to perform at the prestigious Coachella festival. I had the opportunity to witness his electrifying performance at the Allstate Arena in Rosemont. His unique blend of traditional Punjabi music with modern beats brought an incredible energy to the show. The audience was on their feet throughout, dancing and singing along to his hits.</p>
+  <section class="concert">
+    <h2>Concert 2: Diljit Dosanjh at Allstate Arena</h2>
+    <video controls><source src="media/IMG_6472.mp4"></video>
+    <p>Diljit Dosanjh made history at Coachella. His performance at the Allstate Arena was electrifying, blending traditional Punjabi music with modern beats. It was an amazing show full of energy!</p>
+  </section>
 
-  <h2>Concert 3: Post Malone in United Center, Chicago</h2>
-  <video width="700" height="500" controls><source src="media/IMG_2412.mp4" ></video>
-  <p>Although it has been almost two years, Post Malone's concert in Chicago holds a special place for me as it was the first concert I attended after moving to the city. Known for his unique blend of hip-hop, rock, and pop, Post Malone delivered an unforgettable performance, featuring hits like Circles, Rockstar, and Sunflower.</p>
+  <section class="concert">
+    <h2>Concert 3: Post Malone in United Center</h2>
+    <video controls><source src="media/IMG_2412.mp4"></video>
+    <p>Post Malone's concert at the United Center was my first live concert after moving to Chicago, and it was a fantastic introduction to the city's music scene. His performance left a lasting impression.</p>
+  </section>
 </body>
 </html>
