Changed navigation to 1 word

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <ul class="navbar">
     <li><a href="index.html">Resume</a></li>
-    <li><a href="ai_conferences.html">Upcoming AI conferences in Chicago</a></li>
-    <li><a href="concerts.html">Concert Experiences</a></li>
+    <li><a href="ai_conferences.html">AI Conferences</a></li>
+    <li><a href="concerts.html">Concerts</a></li>
   </ul>
 
   <section class="personal-info">
