--- a/ai_conferences.html
+++ b/ai_conferences.html
@@ -10,8 +10,8 @@
 <body>
   <ul class="navbar">
     <li><a href="index.html">Resume</a></li>
-    <li><a href="ai_conferences.html">Upcoming AI conferences in Chicago</a></li>
-    <li><a href="concerts.html">Concert Experiences</a></li>
+    <li><a href="ai_conferences.html">AI Conferences</a></li>
+    <li><a href="concerts.html">Concerts</a></li>
   </ul>
   <h1>Upcoming AI Conferences</h1>
   <h3>I have a deep interest in AI and enjoy staying up to date with the latest trends and developments in this field. Here are some exciting AI conferences in Chicago that you should consider attending as well :)</h3>
