--- a/concerts.html
+++ b/concerts.html
@@ -9,8 +9,8 @@
 <body class="concert_page">
   <ul class="navbar">
     <li><a href="index.html">Resume</a></li>
-    <li><a href="ai_conferences.html">Upcoming AI conferences in Chicago</a></li>
-    <li><a href="concerts.html">Concert Experiences</a></li>
+    <li><a href="ai_conferences.html">AI Conferences</a></li>
+    <li><a href="concerts.html">Concerts</a></li>
   </ul>
 
   <h1>My Concert Experiences</h1>
