--- a/ai_conferences.html
+++ b/ai_conferences.html
@@ -31,7 +31,7 @@
 
   <section class = "conferences">
   <h2>3. International Conference on Business and Artificial Intelligence Technologies (ICBAIT-25)</h2>
-  <img src="media/bus.png" alt="Banner for International Conference on Business and AI Technologies 2025, showcasing AI in business applications">
+  <img src="media/ai3.png" alt="Banner for International Conference on Business and AI Technologies 2025, showcasing AI in business applications">
   <p>The International Conference on Business and Artificial Intelligence Technologies (ICBAIT-25) will take place on March 6th-7th, 2025 in Chicago, USA, offering both in-person and virtual attendance options. Organized by the Atlantic Federation for Technical Education & Research (AFTER), this conference serves as a premier platform for professionals and academics to showcase the latest research and advancements in business and AI technologies. Attendees will have the opportunity to engage with expert panels, keynote speeches, and industry-driven presentations, while networking with global thought leaders.</p>
   <p><a href="https://after.org.in/event/index.php?id=2759331" class="register">Register for ICBAIT-25</a></p>
   </section>
